feat(analysis): 新增NLP审计模块以验证LLM提取的关键词
新增analysis模块，包含evidence_score、consistency、thresholds、baseline、conflict_resolver和auditor等组件，用于评估LLM提取关键词的可信度。主要功能包括：
- 计算关键词在原始数据中的证据支持度（出现次数、持续时间）
- 评估多轮LLM提取的一致性
- 基于基线关键词集计算重叠度
- 动态阈值分类（pass/weak/reject）
- 集成到主流程，在LLM提取后自动进行审计

同时调整了Feishu推送逻辑，过滤低权重和reject级别的关键词，并在输出中显示审计结果。新增测试文件和调试工具以验证功能。

--- a/core/config.json
+++ b/core/config.json
@@ -29,7 +29,7 @@
   },
   "collector": {
     "source": "activitywatch",
-    "aw_db_path": "",
+    "aw_db_path": "C:\\Users\\Jiayang_Pan\\AppData\\Local\\activitywatch\\activitywatch\\aw-server\\peewee-sqlite.v2.db",
     "days": 7,
     "sample_interval_seconds": 30,
     "idle_threshold_seconds": 300,
