feat: 支持按天数配置关键词数量限制并优化数据清洗
- 新增配置项 `llm.topn_by_days`，支持为1天和7天分析设置独立的技能与工具关键词数量限制
- 在 `FeishuPusher.push_keywords` 和 LLM 提示中应用独立的数量限制
- 数据清洗增强：修复标题截断、识别并屏蔽聊天机器人会话、支持应用分组标题
- 新增人工审核脚本 `core/human_audit.py` 用于 LLM 与 NLP 关键词提取的对比评估
- 在 LLM 后处理中，将容器类工具（如浏览器、IDE）从技能类别移至工具类别
- 更新依赖，添加 `requests>=2.31.0` 到 requirements.txt

--- a/core/config.json
+++ b/core/config.json
@@ -16,7 +16,11 @@
       "doubao": "https://ark.cn-beijing.volces.com/api/v3"
     },
     "keyword_min": 10,
-    "keyword_max": 10
+    "keyword_max": 10,
+    "topn_by_days": {
+      "1": { "skills": 5, "tools": 3 },
+      "7": { "skills": 10, "tools": 5 }
+    }
   },
   "env_vars": {
     "DASHSCOPE_API_KEY": "",
