chore: 更新忽略文件、添加调试日志并优化人工审核逻辑
- 向 .gitignore 添加 logs 目录和 .trae 文件
- 在 core/main.py 中添加 TopN 限制的调试打印语句
- 重构 core/human_audit.py，提取 LLM 关键词提取逻辑，增加切片级 LLM 提取的可配置性
- 更新 wordcloud 文件中的图表 ID 和数据

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,10 @@ scripts/
 .DS_Store
 Thumbs.db
 
+# logs\
+logs/
+.trae/
+
 # =======================================================
 # Whitelist (Explicitly tracked)
 # =======================================================
