feat(chatbot): 集成聊天会话分析流水线，支持飞书收件箱自动导入
- 新增聊天会话压缩、清洗、合并及关键词提取模块
- 扩展 ActivityWatch 数据清洗器以支持聊天机器人域统计
- 为飞书收件箱添加文件下载、会话提取和自动推送功能
- 新增配置选项，支持多源聊天数据收集（文件系统、CherryStudio）
- 更新主分析流水线，合并聊天会话关键词并调整词云生成
- 添加相关单元测试，确保核心功能可靠性

--- a/core/config.json
+++ b/core/config.json
@@ -49,6 +49,43 @@
     },
     "webhook_url": ""
   },
+  "feishu_inbox": {
+    "enabled": false,
+    "download_dir": "",
+    "sessions_out": "../logs/chat_sessions.jsonl",
+    "max_bytes": 104857600,
+    "accept_ext": [".zip", ".json", ".txt", ".md"],
+    "max_chars": 6000,
+    "domain_default": "chatgpt.com",
+    "domain_rules": {
+      "chatgpt": "chatgpt.com",
+      "claude": "claude.ai",
+      "gemini": "gemini.google.com",
+      "deepseek": "chat.deepseek.com"
+    },
+    "state_file": "../logs/feishu_inbox_state.json"
+  },
+  "chatbot": {
+    "enabled": false,
+    "days": 7,
+    "max_chars": 6000,
+    "sessions_file": "",
+    "sessions_out": "../logs/chat_sessions_auto.jsonl",
+    "pool_seconds_per_session": 300,
+    "token_weight": 0.4,
+    "sources": [
+      {
+        "type": "filesystem",
+        "path": "E:\\AI-Projects\\Chat_Data\\Gemini",
+        "domain": "chatshare.biz"
+      },
+      {
+        "type": "cherrystudio",
+        "domain": "cherrystudio",
+        "data_dir": ""
+      }
+    ]
+  },
   "output": {
     "wordcloud_file": "wordcloud.html"
   }
