feat(chat): 新增Obsidian导出和CherryStudio备份支持，改进LLM错误处理
- 新增Obsidian笔记导出功能，支持按会话导出为Markdown文件
- 新增CherryStudio备份源支持，可从ZIP备份中提取会话数据
- 改进LLM客户端错误处理，添加详细HTTP错误信息和元数据返回
- 新增Feishu推送决策逻辑，支持根据LLM使用情况和关键词数量决定是否推送
- 扩展聊天源类型，支持obsidian、cherrystudio_backup和cherrystudio API模式
- 更新配置系统，支持provider/base_model自动解析base_url
- 添加环境变量加载和调试模式支持
- 新增相关单元测试覆盖新功能

--- a/core/config.json
+++ b/core/config.json
@@ -9,7 +9,7 @@
     "api_key": "",
     "model": "qwen-max",
     "timeout": 60,
-    "base_model": "dashscope",
+    "base_model": "deepseek",
     "base_url_examples": {
       "dashscope": "https://dashscope.aliyuncs.com/compatible-mode/v1",
       "deepseek": "https://api.deepseek.com/v1",
@@ -80,11 +80,21 @@
         "domain": "chatshare.biz"
       },
       {
-        "type": "cherrystudio",
+        "type": "obsidian",
+        "domain": "cherrystudio"
+      },
+      {
+        "type": "cherrystudio_backup",
         "domain": "cherrystudio",
-        "data_dir": ""
+        "path": "E:\\CherryStudio\\Chat_Backup"
       }
     ]
+  },
+  "obsidian": {
+    "enabled": true,
+    "vault_path": "E:\\AI-Dialog-Backup",
+    "export_mode": "per-session",
+    "folder": "CherryStudio"
   },
   "output": {
     "wordcloud_file": "wordcloud.html"
